# knowbase

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  railway.toml  vercel.json
.github/workflows/: ci.yml  deploy.yml  nightly-eval.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: embed.py  events.py  orchestrator.py  runner.py  sanitizer.py  state.py
backend/app/agents/nodes/: __init__.py  memory_read.py  memory_write.py  orchestrate.py  retrieve.py  synthesize.py  web_search.py
backend/app/agents/tools/: code_execute.py  memory_tools.py  vector_search.py  web_search.py
backend/app/api/v1/: __init__.py  agent_runs.py  api_keys.py  auth.py  conversations.py  documents.py  mcp.py  memories.py  stream.py  tasks.py  workspaces.py
backend/app/core/: cache.py  config.py  deps.py  exceptions.py  limiter.py  logging.py  metrics.py  middleware.py  redis.py  security.py  storage.py
backend/app/db/: seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260527_001_create_users.py  20260527_002_create_core_tables.py  20260711_003_create_api_keys.py
backend/app/db/models/: __init__.py  agent.py  api_key.py  conversation.py  document.py  memory.py  task.py  user.py  workspace.py
backend/app/db/repositories/: agent_repository.py  api_key_repository.py  conversation_repository.py  document_repository.py  memory_repository.py  message_repository.py  task_repository.py  user_repository.py  workspace_repository.py
backend/app/schemas/: account.py  agent.py  api_key.py  auth.py  conversation.py  document.py  memory.py  task.py  user.py  workspace.py
backend/app/services/: account_service.py  auth_service.py  conversation_service.py  document_service.py  memory_service.py  task_service.py  workspace_service.py
backend/app/workers/: __init__.py  arq_settings.py  chunker.py  ingest.py
backend/eval/: fixtures.py  runner.py
backend/eval/baselines/: scores.json
backend/eval/corpus/: marketing_mix.txt  organisationsformen.txt  transaktionskosten.txt
backend/eval/golden/: questions.jsonl
backend/eval/metrics/: citation_accuracy.py  retrieval_recall.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_retrieval_recall.py
backend/tests/unit/: test_account_deletion.py  test_api_keys.py  test_auth_service.py  test_chunker.py  test_citation_accuracy.py  test_config.py  test_conversation_repository.py  test_conversation_service.py  test_document_repository.py  test_events.py  test_graph_double_fire.py  test_health.py  test_ingest.py  test_limiter.py  test_mcp_isolation.py  test_memory_repository.py  test_memory_service.py  test_memory_tools.py  test_orchestrator.py  test_sanitizer.py  test_security.py  test_task_repository.py  test_task_service.py  test_tools.py  test_workspace_repository.py  test_workspace_service.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  (+2 more)
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
mcp-server/: pyproject.toml
mcp-server/app/: client.py  config.py  main.py
mcp-server/tests/: test_tools.py
worker/: Dockerfile  README.md  pyproject.toml  railway.toml
worker/app/: main.py
worker/tests/: test_worker.py
(+35 files in other folders)
