[project]
name = "backend"
version = "0.1.0"
description = "Knowbase — Multi-Agent Knowledge Workspace API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.136.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "openpyxl>=3.1.5",
    "pgvector>=0.4.2",
    "prometheus-client>=0.22.0",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.29",
    "redis>=5.3.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.5.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ANN", "S"]
ignore = ["ANN401", "S101", "S105", "S106", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/db/migrations/*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
    "types-python-jose>=3.5.0.20260408",
]
