[project]
name = "knowbase-mcp-server"
version = "0.1.0"
description = "Knowbase MCP server — exposes workspace knowledge to any MCP-compatible AI client"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
knowbase-mcp = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "B"]
ignore = ["ANN401"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
