[project]
name = "worker"
version = "0.1.0"
description = "Knowbase — ARQ background worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "redis>=5.3.1",
    "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ANN", "S"]
ignore = ["ANN401", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]
